--- a/Final_recomm.ipynb
+++ b/Final_recomm.ipynb
@@ -394,36 +394,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
+    "\n",
+    "\n",
+    "\n",
     "def recommend_movie(movie):\n",
+    "    \n",
     "    try:\n",
     "\n",
     "        index = final_df[final_df['title'] == movie].index[0]\n",
     "        distances = sorted(list(enumerate(cosine_sim[index])),reverse=True,key = lambda x: x[1])\n",
+    "        \n",
+    "        myfile = open('xyz.txt', 'w',encoding=\"utf-8\")\n",
+    "        \n",
     "        for i in distances[1:16]:\n",
-    "            print(final_df.iloc[i[0]].title.capitalize())        \n",
+    "            myfile.write(\"%s\\n\" % final_df.iloc[i[0]].title.capitalize())\n",
+    "            \n",
+    "        myfile.close()\n",
     "                \n",
     "    except IndexError:\n",
-    "        url = \"https://imdb8.p.rapidapi.com/auto-complete\"\n",
     "\n",
-    "        querystring = {\"q\":movie}\n",
+    "\n",
+    "        url = \"https://imdb-internet-movie-database-unofficial.p.rapidapi.com/film/{}\".format(movie)\n",
     "\n",
     "        headers = {\n",
-    "            'x-rapidapi-host': \"imdb8.p.rapidapi.com\",\n",
+    "            'x-rapidapi-host': \"imdb-internet-movie-database-unofficial.p.rapidapi.com\",\n",
     "            'x-rapidapi-key': \"a114896f16mshb4a8322f5deb807p1443d6jsn6d197fdd2a80\"\n",
     "            }\n",
     "\n",
-    "        response = requests.request(\"GET\", url, headers=headers, params=querystring)\n",
+    "        response = requests.request(\"GET\", url, headers=headers)\n",
     "\n",
-    "        id = response.json()['d'][0][\"id\"]\n",
-    "        \n",
+    "        imdb_id = response.json()[\"id\"]\n",
+    "\n",
     "        url = \"https://imdb8.p.rapidapi.com/title/get-more-like-this\"\n",
     "\n",
-    "        querystring = {\"tconst\":id,\"currentCountry\":\"US\",\"purchaseCountry\":\"US\"}\n",
+    "        querystring = {\"tconst\":\"{}\".format(imdb_id),\"currentCountry\":\"US\",\"purchaseCountry\":\"US\"}\n",
+    "\n",
+    "        headers = {\n",
+    "            'x-rapidapi-host': \"imdb8.p.rapidapi.com\",\n",
+    "            'x-rapidapi-key': \"e3b57ed72emsh103d618464887c3p1aeae3jsn26c988347666\"\n",
+    "            }\n",
     "\n",
     "        response = requests.request(\"GET\", url, headers=headers, params=querystring)\n",
     "\n",
@@ -431,42 +445,36 @@
     "        movies_list = [s.replace(\"/title/\", \"\") for s in movies_list]\n",
     "        movies_list = [s.replace(\"/\", \"\") for s in movies_list]\n",
     "        \n",
-    "        url = \"https://imdb8.p.rapidapi.com/title/get-details\"\n",
-    "\n",
-    "        for i in range(6):\n",
-    "\n",
-    "            querystring = {\"tconst\":movies_list[i]}\n",
-    "\n",
-    "            response = requests.request(\"GET\", url, headers=headers, params=querystring)\n",
-    "\n",
-    "            print(response.json()[\"title\"])"
+    "        myfile = open('xyz.txt', 'w',encoding=\"utf-8\")\n",
+    "        \n",
+    "        for i in range(len(movies_list)-10):\n",
+    "            \n",
+    "            url = \"https://imdb-internet-movie-database-unofficial.p.rapidapi.com/film/{}\".format(movies_list[i])\n",
+    "            \n",
+    "            headers = {\n",
+    "            'x-rapidapi-host': \"imdb-internet-movie-database-unofficial.p.rapidapi.com\",\n",
+    "            'x-rapidapi-key': \"a114896f16mshb4a8322f5deb807p1443d6jsn6d197fdd2a80\"\n",
+    "            }\n",
+    "            \n",
+    "            response = requests.request(\"GET\", url, headers=headers)\n",
+    "            \n",
+    "            myfile.write(\"%s\\n\" % response.json()[\"title\"])\n",
+    "            \n",
+    "        myfile.close()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Toy Story\n",
-      "WALL·E\n",
-      "Finding Nemo\n",
-      "Up\n",
-      "Monsters, Inc.\n",
-      "Toy Story 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "recommend_movie(\"lion king\")"
+    "recommend_movie(\"goldeneye\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,6 +482,13 @@
     "pickle.dump(final_df,open('movies.pkl','wb'))\n",
     "pickle.dump(cosine_sim,open('model.pkl','wb'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
